--- a/simulation_1.html
+++ b/simulation_1.html
@@ -11,7 +11,7 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-slider/10.0.0/css/bootstrap-slider.min.css" rel="stylesheet">
     <link href="css/toolbar.css" rel="stylesheet">
 
-    <title>Connected Chemistry</title>
+    <title>Connected Chemistry - Scientific Observations</title>
   </head>
   <body>
 
@@ -26,7 +26,7 @@
           <div class="dropdown">
             <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">Simulations
             <span class="caret"></span></button>
-            <ul class="dropdown-menu col-xs-12">
+            <ul class="dropdown-menu col-xs-12 sim">
               <li><a href="simulation_1.html">Sim1:Making scientific observations with a Model </a></li>
               <li><a href="simulation_2.html">Sim2:Classifying Matter </a></li>
               <li><a href="simulation_3.html">Sim3:Physical changes </a></li>
