--- a/simulation_4.html
+++ b/simulation_4.html
@@ -26,7 +26,7 @@
           <div class="dropdown">
             <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">Simulations
             <span class="caret"></span></button>
-            <ul class="dropdown-menu col-xs-12">
+            <ul class="dropdown-menu col-xs-12 sim">
               <li><a href="simulation_1.html">Sim1:Making scientific observations with a Model </a></li>
               <li><a href="simulation_2.html">Sim2:Classifying Matter </a></li>
               <li><a href="simulation_3.html">Sim3:Physical changes </a></li>
