--- a/Units/Unit 1/simulation_5.html
+++ b/Units/Unit 1/simulation_5.html
@@ -9,8 +9,9 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-slider/10.0.0/css/bootstrap-slider.min.css" rel="stylesheet">
-    <link href="css/toolbar.css" rel="stylesheet">
-    <title>Connected Chemistry - Classifying Matter</title>
+    <link href="../../css/toolbar.css" rel="stylesheet">
+    
+    <title>Connected Chemistry -  Mixtures</title>
   </head>
   <body>
 
@@ -37,13 +38,12 @@
             <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">Select Set
             <span class="caret"></span></button>
             <ul class="dropdown-menu col-xs-12">
-              <li class="select-set"><button type="button" class="btn btn-primary btn-set" onclick="setMolecule(1)">Set 1</button></li>
-              <li class="select-set"><button type="button" class="btn btn-primary btn-set" onclick="setMolecule(2)">Set 2</button></li>
-              <li class="select-set"><button type="button" class="btn btn-primary btn-set" onclick="setMolecule(3)">Set 3</button></li>
-              <li class="select-set"><button type="button" class="btn btn-primary btn-set" onclick="setMolecule(4)">Set 4</button></li>
-              <li class="select-set"><button type="button" class="btn btn-primary btn-set" onclick="setMolecule(5)">Set 5</button></li>
-              <li class="select-set"><button type="button" class="btn btn-primary btn-set" onclick="setMolecule(6)">Set 6</button></li>
-              <li class="select-set"><button type="button" class="btn btn-primary btn-set" onclick="setMolecule(7)">Set 7</button></li>
+              <li class="select-set"><button type="button" class="btn btn-primary btn-set" onclick="setMoleculeSim5(1)">Set 1</button></li>
+              <li class="select-set"><button type="button" class="btn btn-primary btn-set" onclick="setMoleculeSim5(2)">Set 2</button></li>
+              <li class="select-set"><button type="button" class="btn btn-primary btn-set" onclick="setMoleculeSim5(3)">Set 3</button></li>
+              <li class="select-set"><button type="button" class="btn btn-primary btn-set" onclick="setMoleculeSim5(4)">Set 4</button></li>
+              <li class="select-set"><button type="button" class="btn btn-primary btn-set" onclick="setMoleculeSim5(5)">Set 5</button></li>
+              <li class="select-set"><button type="button" class="btn btn-primary btn-set" onclick="setMoleculeSim5(6)">Set 6</button></li>
             </ul>
           </div>
         </div>
@@ -53,11 +53,33 @@
             <span class="caret"></span></button>
             <ul class="dropdown-menu col-xs-12 dropdown-menu-substance">
               <li>
-                <img id="molimg" src="assets/Water.png"><h5 id="molname" style="display:inline">Water</h5>
+                <img id="molimg" src="../../assets/HydrogenPeroxide.png"><h5 id="molname" style="display:inline">HydrogenPeroxide</h5>
                 <input id="ex1" data-slider-id='ex1Slider' type="text" data-slider-min="0" data-slider-max="10" data-slider-step="2" data-slider-value="2" data-slider-selection="before" data-slider-tooltip="hide" data-value="2" value="2" onchange="setAddMoleculeLabel()"/>
                 <span class="badge badge-primary slider-val" id="moleculeval">2 </span>
                 <span class="input-group-btn">
                   <button type="button" class="btn btn-default btn-number" onclick="addMoleculesBtn()">
+                    <span class="fa fa-plus"></span>
+                   </button>
+                </span>
+              </li>
+              <hr>
+              <li>
+                <img id="molimg1" src="../../assets/HydrogenPeroxide.png"><h5 id="molname1" style="display:inline">HydrogenPeroxide</h5>
+                <input id="ex5" data-slider-id='ex1Slider' type="text" data-slider-min="0" data-slider-max="10" data-slider-step="2" data-slider-value="2" data-slider-selection="before" data-slider-tooltip="hide" data-value="2" value="2" onchange="setAddMoleculeLabel1()"/>
+                <span class="badge badge-primary slider-val" id="moleculeval1">2 </span>
+                <span class="input-group-btn">
+                  <button type="button" class="btn btn-default btn-number" onclick="addMoleculesBtn1(2)">
+                    <span class="fa fa-plus"></span>
+                   </button>
+                </span>
+              </li>
+              <hr id="hr2">
+              <li id="molSlider2">
+                <img id="molimg2" src="../../assets/HydrogenPeroxide.png"><h5 id="molname2" style="display:inline">HydrogenPeroxide</h5>
+                <input id="ex6" data-slider-id='ex1Slider' type="text" data-slider-min="0" data-slider-max="10" data-slider-step="2" data-slider-value="2" data-slider-selection="before" data-slider-tooltip="hide" data-value="2" value="2" onchange="setAddMoleculeLabel2()"/>
+                <span class="badge badge-primary slider-val" id="moleculeval2">2 </span>
+                <span class="input-group-btn">
+                  <button type="button" class="btn btn-default btn-number" onclick="addMoleculesBtn1(3)">
                     <span class="fa fa-plus"></span>
                    </button>
                 </span>
@@ -86,7 +108,6 @@
         </div>
         <div class="column column-slider">
           <div class="personalslider">
-            <!-- <button class="btn btn-primary speed-btn" type="button" onclick="setSpeedSliderVal()">Set Speed</button> -->
             <span class="badge badge-primary slider-name">Speed </span>
             <input id="ex2" data-slider-id='ex1Slider' type="text" data-slider-min="0" data-slider-max="1" data-slider-step="0.01" data-slider-value="1" data-toggle-slider-selection="before" data-slider-tooltip="hide" data-value="1" value="1" onchange="setSpeedSliderVal()"/>
             <span class="badge badge-primary slider-val" id="speedValue">1 </span>
@@ -120,15 +141,25 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-slider/10.0.0/bootstrap-slider.min.js"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.2/Chart.min.js"></script>
-    <script language="javascript" type="text/javascript" src="js/ext/p5.js"></script>
-    <script language="javascript" type="text/javascript" src="js/ext/matter.js"></script>
-    <script language="javascript" type="text/javascript" src="js/ext/p5.dom.js"></script>
-    <script language="javascript" type="text/javascript" src="js/ext/TotakKE.js"></script>
-    <script language="javascript" type="text/javascript" src="js/charts.js"></script>
-    <script language="javascript" type="text/javascript" src="js/database.js"></script>
-    <script language="javascript" type="text/javascript" src="js/sketch.js"></script>
+    <script language="javascript" type="text/javascript" src="../../js/ext/p5.js"></script>
+    <script language="javascript" type="text/javascript" src="../../js/ext/matter.js"></script>
+    <script language="javascript" type="text/javascript" src="../../js/ext/p5.dom.js"></script>
+    <script language="javascript" type="text/javascript" src="../../js/ext/TotakKE.js"></script>
+    <script language="javascript" type="text/javascript" src="../../js/charts.js"></script>
+    <script language="javascript" type="text/javascript" src="../../js/database.js"></script>
+    <script language="javascript" type="text/javascript" src="../../js/unit_1_sketch.js"></script>
     <script type="text/javascript">
       var sliderAddMolecule = new Slider('#ex1', {
+        formatter: function(value) {
+        return 'Current value: ' + value;
+        }
+      });
+      var sliderAddMolecule1 = new Slider('#ex5', {
+        formatter: function(value) {
+        return 'Current value: ' + value;
+        }
+      });
+      var sliderAddMolecule2 = new Slider('#ex6', {
         formatter: function(value) {
         return 'Current value: ' + value;
         }
