--- a/Units/Unit 3/simulation_1.html
+++ b/Units/Unit 3/simulation_1.html
@@ -9,9 +9,9 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-slider/10.0.0/css/bootstrap-slider.min.css" rel="stylesheet">
-    <link href="css/toolbar.css" rel="stylesheet">
-    
-    <title>Connected Chemistry - Physical Changes</title>
+    <link href="../../css/toolbar.css" rel="stylesheet">
+
+    <title>Connected Chemistry - Scientific Observations</title>
   </head>
   <body>
 
@@ -28,10 +28,6 @@
             <span class="caret"></span></button>
             <ul class="dropdown-menu col-xs-12 sim">
               <li><a href="simulation_1.html">Sim1:Making scientific observations with a Model </a></li>
-              <li><a href="simulation_2.html">Sim2:Classifying Matter </a></li>
-              <li><a href="simulation_3.html">Sim3:Physical changes </a></li>
-              <li><a href="simulation_4.html">Sim4:Chemical changes </a></li>
-              <li><a href="simulation_5.html">Sim5:Mixtures </a></li>
             </ul>
           </div>
           <div class="dropdown">
@@ -39,6 +35,11 @@
             <span class="caret"></span></button>
             <ul class="dropdown-menu col-xs-12">
               <li class="select-set"><button type="button" class="btn btn-primary btn-set" onclick="setMolecule(1)">Set 1</button></li>
+              <li class="select-set"><button type="button" class="btn btn-primary btn-set" onclick="setMolecule(2)">Set 2</button></li>
+              <li class="select-set"><button type="button" class="btn btn-primary btn-set" onclick="setMolecule(3)">Set 3</button></li>
+              <li class="select-set"><button type="button" class="btn btn-primary btn-set" onclick="setMolecule(5)">Set 5</button></li>
+              <li class="select-set"><button type="button" class="btn btn-primary btn-set" onclick="setMolecule(8)">Set 8</button></li>
+              <li class="select-set"><button type="button" class="btn btn-primary btn-set" onclick="setMolecule(9)">Set 9</button></li>
             </ul>
           </div>
         </div>
@@ -48,11 +49,22 @@
             <span class="caret"></span></button>
             <ul class="dropdown-menu col-xs-12 dropdown-menu-substance">
               <li>
-                <img id="molimg" src="assets/Water.png"><h5 id="molname" style="display:inline">Water</h5>
+                <img id="molimg" src="../assets/Chlorine.png"><h5 id="molname" style="display:inline">Water</h5>
                 <input id="ex1" data-slider-id='ex1Slider' type="text" data-slider-min="0" data-slider-max="10" data-slider-step="2" data-slider-value="2" data-slider-selection="before" data-slider-tooltip="hide" data-value="2" value="2" onchange="setAddMoleculeLabel()"/>
                 <span class="badge badge-primary slider-val" id="moleculeval">2 </span>
                 <span class="input-group-btn">
                   <button type="button" class="btn btn-default btn-number" onclick="addMoleculesBtn()">
+                    <span class="fa fa-plus"></span>
+                   </button>
+                </span>
+              </li>
+              <hr id="hr1">
+              <li id="molSlider1">
+                <img id="molimg1" src="../../assets/Chlorine.png"><h5 id="molname1" style="display:inline">HydrogenPeroxide</h5>
+                <input id="ex5" data-slider-id='ex1Slider' type="text" data-slider-min="0" data-slider-max="10" data-slider-step="2" data-slider-value="2" data-slider-selection="before" data-slider-tooltip="hide" data-value="2" value="2" onchange="setAddMoleculeLabel1()"/>
+                <span class="badge badge-primary slider-val" id="moleculeval1">2 </span>
+                <span class="input-group-btn">
+                  <button type="button" class="btn btn-default btn-number" onclick="addMoleculesBtn1(2)">
                     <span class="fa fa-plus"></span>
                    </button>
                 </span>
@@ -101,8 +113,8 @@
       <div class="row drawing-area">
         <div class="column column-data">
             <canvas id="lineChart" height="270px" width="350px"></canvas>
-            <span class="badge badge-primary label-temp">Temperature C</span>
-            <span class="badge badge-primary" id="tempval">25</span>
+            <!-- <span class="badge badge-primary label-temp">Temperature C</span>
+            <span class="badge badge-primary" id="tempval">25</span> -->
         </div>
       </div>
     </div>
@@ -114,13 +126,13 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-slider/10.0.0/bootstrap-slider.min.js"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.2/Chart.min.js"></script>
-    <script language="javascript" type="text/javascript" src="js/ext/p5.js"></script>
-    <script language="javascript" type="text/javascript" src="js/ext/matter.js"></script>
-    <script language="javascript" type="text/javascript" src="js/ext/p5.dom.js"></script>
-    <script language="javascript" type="text/javascript" src="js/ext/TotakKE.js"></script>
-    <script language="javascript" type="text/javascript" src="js/charts.js"></script>
-    <script language="javascript" type="text/javascript" src="js/database.js"></script>
-    <script language="javascript" type="text/javascript" src="js/sketch.js"></script>
+    <script language="javascript" type="text/javascript" src="../../js/ext/p5.js"></script>
+    <script language="javascript" type="text/javascript" src="../../js/ext/matter.js"></script>
+    <script language="javascript" type="text/javascript" src="../../js/ext/p5.dom.js"></script>
+    <script language="javascript" type="text/javascript" src="../../js/ext/TotakKE.js"></script>
+    <script language="javascript" type="text/javascript" src="../../js/charts.js"></script>
+    <script language="javascript" type="text/javascript" src="../../js/database.js"></script>
+    <script language="javascript" type="text/javascript" src="../../js/unit_3_sketch.js"></script>
     <script type="text/javascript">
       var sliderAddMolecule = new Slider('#ex1', {
         formatter: function(value) {
@@ -138,6 +150,11 @@
         }
       });
       var sliderHeat = new Slider('#ex4', {
+        formatter: function(value) {
+        return 'Current value: ' + value;
+        }
+      });
+      var sliderAddMolecule1 = new Slider('#ex5', {
         formatter: function(value) {
         return 'Current value: ' + value;
         }
