--- a/Units/Unit 3/simulation_1.html
+++ b/Units/Unit 3/simulation_1.html
@@ -24,19 +24,20 @@
         </div>
         <div class="column">
           <div class="dropdown">
-            <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">Simulations
+            <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown" id="sim">Simulation 1
             <span class="caret"></span></button>
             <ul class="dropdown-menu col-xs-12 sim">
-              <li><a href="simulation_1.html">Sim1:Making scientific observations with a Model </a></li>
+              <li><a href="simulation_1.html">Sim1: Making scientific observations with a Model </a></li>
             </ul>
           </div>
           <div class="dropdown">
-            <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">Select Set
+            <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown" id="selectset">Select Set
             <span class="caret"></span></button>
             <ul class="dropdown-menu col-xs-12">
               <li class="select-set"><button type="button" class="btn btn-primary btn-set" onclick="setMolecule(1)">Set 1</button></li>
               <li class="select-set"><button type="button" class="btn btn-primary btn-set" onclick="setMolecule(2)">Set 2</button></li>
               <li class="select-set"><button type="button" class="btn btn-primary btn-set" onclick="setMolecule(3)">Set 3</button></li>
+              <li class="select-set"><button type="button" class="btn btn-primary btn-set" onclick="setMolecule(4)">Set 4</button></li>
               <li class="select-set"><button type="button" class="btn btn-primary btn-set" onclick="setMolecule(5)">Set 5</button></li>
               <li class="select-set"><button type="button" class="btn btn-primary btn-set" onclick="setMolecule(8)">Set 8</button></li>
               <li class="select-set"><button type="button" class="btn btn-primary btn-set" onclick="setMolecule(9)">Set 9</button></li>
