--- a/Units/Unit 1/simulation_1.html
+++ b/Units/Unit 1/simulation_1.html
@@ -14,17 +14,22 @@
     <title>Connected Chemistry - Scientific Observations</title>
   </head>
   <body>
-
+    <div id="myModal" class="modal">
+      <!-- Modal content -->
+      <div class="modal-content">
+        <p>Please enlarge your window for the site to work and refresh</p>
+      </div>
+    </div>
     <div class="container-fluid">
       <div class="row toolbar">
         <div class="column">
-          <a href="#" class="btn btn-success btn-lg">
+          <a href="../../index.html" class="btn btn-success btn-lg">
             <span class="fa fa-home"></span> 
           </a>
         </div>
         <div class="column">
           <div class="dropdown">
-            <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">Simulations
+            <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown" id="sim">Simulation 1
             <span class="caret"></span></button>
             <ul class="dropdown-menu col-xs-12 sim">
               <li><a href="simulation_1.html">Sim1:Making scientific observations with a Model </a></li>
@@ -35,7 +40,7 @@
             </ul>
           </div>
           <div class="dropdown">
-            <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">Select Set
+            <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown" id="selectset">Select Set
             <span class="caret"></span></button>
             <ul class="dropdown-menu col-xs-12">
               <li class="select-set"><button type="button" class="btn btn-primary btn-set" onclick="setMolecule(1)">Set 1</button></li>
@@ -88,7 +93,7 @@
           <div class="personalslider">
             <span class="badge badge-primary slider-name">Volume</span>
             <input id="ex3" data-slider-id='ex1Slider' type="text" data-slider-min="0" data-slider-max="500" data-slider-step="1" data-slider-value="0" data-slider-selection="before" data-slider-tooltip="hide" data-value="0" value="0" onchange="setVolumeSliderVal()"/>
-            <span class="badge badge-primary slider-val" id="volumeValue">0 </span>
+            <span class="badge badge-primary slider-val" id="volumeValue">100 </span>
           </div>
           <div class="personalslider">
             <span class="badge badge-primary slider-name" id="heat">Heat  </span>
